run wmllint on everything

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -66,7 +66,7 @@
         team_name=Bad
         user_team_name=_ "Orcs"
         color=green
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
         recruit=Orcish Archer,Orcish Grunt
 #ifdef HARD
         gold=40
@@ -91,7 +91,7 @@
         user_team_name= _ "Bandits"
         recruit=Ruffian,Thug,Footpad,Thief
         color=blue
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
 #ifdef HARD
         gold=40
 #else
@@ -141,7 +141,7 @@
         {LOYAL_UNIT 3 (Thug) 32 19}
         {LOYAL_UNIT 3 (Footpad) 32 20}
         {LOYAL_UNIT 3 (Thief) 32 21}
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
 #ifdef HARD
         {LOYAL_UNIT 3 (Thug) 32 18}
         {LOYAL_UNIT 3 (Footpad) 32 22}
@@ -298,6 +298,7 @@
         [message]
             speaker=narrator
             message= _ "After many days of battle, the civilians enlisted, not used to fight, began to desert, frightened and exhausted! The large voids that opened in the lines of the defenders made even more vulnerable those who still insisted on fighting, and soon it was the end!"
+            image=wesnoth-icon.png
         [/message]
         [message]
             speaker=Glauco
