--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -260,7 +260,7 @@
             {IS_LOYAL}
             [attack]
                 name=claws
-                description="claws"
+                description=_ "claws"
                 icon=attack/claws-animal.png
                 type=blade
                 range=melee
@@ -329,7 +329,7 @@
                         [then]
                             [message]
                                 speaker=Ranfy
-                                message="Kreeee!"
+                                message=_ "Kreeee!"
                             [/message]
                             [message]
                                 speaker=Divaid
@@ -412,7 +412,7 @@
             [then]
                 [message]
                     speaker=Ranfy
-                    message="Kraii?"
+                    message=_ "Kraii?"
                 [/message]
                 [message]
                     speaker=Divaid
