--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -111,7 +111,7 @@
 #endif
         team_name=Orcs
         user_team_name= _ "Orcs"
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
     [/side]
     {STARTING_VILLAGES_AREA 2 20 2 8}
 
@@ -123,7 +123,7 @@
         recruit=Naga Fighter,Naga Warrior
         team_name=Orcs
         user_team_name= _ "Nagas"
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
         hidden=yes
     [/side]
 
