--- a/units/Great_Ogre.cfg
+++ b/units/Great_Ogre.cfg
@@ -12,8 +12,8 @@
         arcane=80
     [/resistance]
     movement=5
-    small_profile="portraits/monsters/transparent/ogre.png~SCALE(205,205)"
-    profile="portraits/monsters/transparent/ogre.png"
+    small_profile="portraits/monsters/ogre.png~SCALE(205,205)"
+    profile="portraits/monsters/ogre.png"
     experience=120
     level=3
     alignment=neutral
@@ -31,13 +31,13 @@
         size=400
         side="left"
         mirror="false"
-        image="portraits/monsters/transparent/ogre.png"
+        image="portraits/monsters/ogre.png"
     [/portrait]
     [portrait]
         size=400
         side="right"
         mirror="true"
-        image="portraits/monsters/transparent/ogre.png"
+        image="portraits/monsters/ogre.png"
     [/portrait]
     [attack]
         name=cleaver
