--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -136,7 +136,7 @@
 #define 02A_RANFY_INTRODUCTION
     [message]
         speaker=Ranfy
-        message="Kreeeeee !"
+        message=_ "Kreeeeee !"
     [/message]
     [message]
         speaker=Glauco
@@ -168,7 +168,7 @@
     [/sound]
     [message]
         speaker=Ranfy
-        message="Kraaaaaa ... Kruu Kruu ... Fiiii"
+        message=_ "Kraaaaaa ... Kruu Kruu ... Fiiii"
     [/message]
     [message]
         speaker=Divaid
@@ -260,7 +260,7 @@
 #define 02B_FANGY_INTRODUCTION
     [message]
         speaker=Fangy
-        message="GRRRRRR !"
+        message=_ "GRRRRRR !"
     [/message]
     [message]
         speaker=Glauco
@@ -284,7 +284,7 @@
     [/sound]
     [message]
         speaker=Fangy
-        message="Grauur ... Grr ... wuuf"
+        message=_ "Grauur ... Grr ... wuuf"
     [/message]
     [message]
         speaker=Croquet
