--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -67,7 +67,7 @@
         team_name=Orcs
         user_team_name= _ "Orcs"
         color=green
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
     [/side]
     {STARTING_VILLAGES_AREA 2 26 2 7}
 
