--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -77,7 +77,7 @@
 #endif
         team_name=Nagas
         user_team_name=_"Nagas"
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
     [/side]
     {STARTING_VILLAGES_AREA 2 30 7 5}
 
@@ -108,7 +108,7 @@
         [/attack]
         team_name=Wesnothians
         user_team_name=_"Ogres"
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
     [/side]
     {STARTING_VILLAGES_AREA 3 22 20 5}
 
