--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -68,7 +68,7 @@
 #endif
         team_name=Saurian
         user_team_name= _ "Saurian"
-        {FLAG_VARIANT ragged}
+        {FLAG_VARIANT6 ragged}
     [/side]
     {STARTING_VILLAGES_AREA 2 36 4 6}
     {STARTING_VILLAGES_AREA 2 28 13 5}
