--- a/_main.cfg
+++ b/_main.cfg
@@ -16,11 +16,17 @@
 
     first_scenario="01_The_Attack_to_Amoran"
 
-    difficulties=NORMAL,HARD
+    difficulties=EASY,NORMAL,HARD
     [difficulty]
-        define=NORMAL
+        define=EASY
         image="units/human-loyalists/sergeant.png~RC(magenta>red)"
         label= _"Sergeant"
+        description= _"Easy"
+    [/difficulty]
+    [difficulty]
+        define=NORMAL
+        image="units/human-loyalists/lieutenant.png~RC(magenta>red)"
+        label= _"Lieutenant"
         description= _"Normal"
     [/difficulty]
     [difficulty]
@@ -39,12 +45,18 @@
         [entry]
             name = "Argesilao"
         [/entry]
+        [entry]
+            name = "Eric Gallager (egallager, a.k.a. cooljeanius)"
+        [/entry]
     [/about]
 
     [about]
         title = _ "Campaign Maintenance"
         [entry]
             name = "Always Argesilao, for the moment"
+        [/entry]
+        [entry]
+            name = "Eric Gallager (egallager, a.k.a. cooljeanius)"
         [/entry]
     [/about]
 
