initial pass at adding 3rd difficulty; untested

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -5,11 +5,7 @@
     name= _ "The Attack to Amoran"
     map_data="{~add-ons/A_Little_Adventure/maps/01_The_Attack_To_Amoran.map}"
 
-#ifdef NORMAL
-    turns=24
-#else
-    turns=20
-#endif
+    {TURNS 28 24 20}
 
     {SCHEDULE_8H}
 
@@ -43,6 +39,8 @@
         user_team_name=_ "Wesnothians"
         recruit=Peasant,Woodsman
         {FLAG_VARIANT loyalist}
+        # When gold is left undefined it defaults to 100, so use that as a base amount:
+        {GOLD 120 110 100}
 
         type=Sergeant
         id=Glauco
@@ -68,11 +66,7 @@
         color=green
         {FLAG_VARIANT6 ragged}
         recruit=Orcish Archer,Orcish Grunt
-#ifdef HARD
-        gold=40
-#else
-        gold=20
-#endif
+        {GOLD 20 30 40}
 
         type=Orcish Warrior
         id=Grunto
@@ -92,11 +86,7 @@
         recruit=Ruffian,Thug,Footpad,Thief
         color=blue
         {FLAG_VARIANT6 ragged}
-#ifdef HARD
-        gold=40
-#else
-        gold=20
-#endif
+        {GOLD 20 30 40}
 
         type=Bandit
         id=Dadoc
@@ -189,7 +179,11 @@
         [/sound]
 
         [unit]
+#ifdef EASY
+            type=Dragoon
+#else
             type=Cavalryman
+#endif
             id=Geobard
             name="Geobard"
             unrenamable=yes
@@ -257,7 +251,7 @@
         [/message]
         [message]
             speaker=Dadoc
-            message= _ "That stupid orc got himself killed, I'm not going to do his same end. Let's retire, guys, we'll be back on another occasion, with stronger allies!"
+            message= _ "That stupid orc got himself killed, I'm not going to come to the same end as him. Let's retire, guys, we'll be back on another occasion, with stronger allies!"
         [/message]
         {VICTORY}
         [endlevel]
@@ -297,7 +291,7 @@
         {INCIDENTAL_MUSIC defeat.ogg}
         [message]
             speaker=narrator
-            message= _ "After many days of battle, the civilians enlisted, not used to fight, began to desert, frightened and exhausted! The large voids that opened in the lines of the defenders made even more vulnerable those who still insisted on fighting, and soon it was the end!"
+            message= _ "After many days of battle, the civilians enlisted, not used to fighting, began to desert, frightened and exhausted! The large voids that opened in the lines of the defenders made those who still insisted on fighting even more vulnerable, and soon it was the end!"
             image=wesnoth-icon.png
         [/message]
         [message]
