--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -23,11 +23,7 @@
     {EXTRA_SCENARIO_MUSIC battle.ogg}
     {EXTRA_SCENARIO_MUSIC frantic.ogg}
 
-#ifdef NORMAL
-    turns=24
-#else
-    turns=20
-#endif
+    {TURNS 28 24 20}
 
     [side]
         side=1
@@ -68,11 +64,17 @@
 
         # ***** setting scenarios variables *****
 
+#ifdef EASY
+        {VARIABLE no_woods_tiles_percent 55}
+        {VARIABLE second_unit_prob 2}
+        {VARIABLE hidden_gold 120}
+#endif
 #ifdef NORMAL
         {VARIABLE no_woods_tiles_percent 40}
         {VARIABLE second_unit_prob 5}
         {VARIABLE hidden_gold 100}
-#else
+#endif
+#ifdef HARD
         {VARIABLE no_woods_tiles_percent 25}
         {VARIABLE second_unit_prob 8}
         {VARIABLE hidden_gold 80}
@@ -154,7 +156,7 @@
         {GENERIC_UNIT 1 (Spearman) 6 2 }
         {GENERIC_UNIT 1 (Bowman) 4 3 }
         {GENERIC_UNIT 1 (Spearman) 5 4 }
-#ifdef NORMAL
+#ifndef HARD
         {GENERIC_UNIT 1 (Bowman) 4 2 }
         {GENERIC_UNIT 1 (Spearman) 6 3 }
 #endif
@@ -297,7 +299,7 @@
             [/objective]
             [gold_carryover]
                 bonus=yes
-                carryover_percentage=20
+                carryover_percentage={ON_DIFFICULTY 40 30 20}
             [/gold_carryover]
         [/objectives]
     [/event]
@@ -442,7 +444,7 @@
         [/filter]
         [message]
             speaker=Dadoc
-            message= _ "End of run ... for me ..."
+            message= _ "End of run... for me..."
         [/message]
         [if]
             [variable]
@@ -474,7 +476,7 @@
         [endlevel]
             bonus=yes
             carryover_add=true
-            carryover_percentage=20
+            carryover_percentage={ON_DIFFICULTY 40 30 20}
             result=victory
         [/endlevel]
     [/event]
