--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -6,11 +6,7 @@
     map_data="{~add-ons/A_Little_Adventure/maps/03_The_Nagas_Nest.map}"
     next_scenario=04_The_Bloody_Hills
 
-#ifdef NORMAL
-    turns=20
-#else
-    turns=16
-#endif
+    {TURNS 24 20 16}
 
     {SCHEDULE_8H}
 
@@ -44,11 +40,7 @@
         recruit=Bowman,Spearman
         x,y=6,12
         {FLAG_VARIANT loyalist}
-#ifdef NORMAL
-        gold=60
-#else
-        gold=40
-#endif
+        {GOLD 80 60 40}
         team_name=Wesnothians
         user_team_name=_"Wesnothians"
     [/side]
@@ -68,13 +60,8 @@
             grouping=no
             passive_leader=no
         [/ai]
-#ifdef HARD
-        gold=300
-        income=20
-#else
-        gold=200
-        income=12
-#endif
+        {GOLD 100 200 300}
+        {INCOME 12 16 20}
         team_name=Nagas
         user_team_name=_"Nagas"
         {FLAG_VARIANT6 ragged}
@@ -90,11 +77,7 @@
         canrecruit=yes
         recruit=Young Ogre,She Ogre
         x,y=22,20
-#ifdef HARD
-        gold=20
-#else
-        gold=40
-#endif
+        {GOLD 60 40 20}
         [ai]
             grouping=yes
         [/ai]
@@ -141,7 +124,7 @@
             {TURNS_RUN_OUT}
             [gold_carryover]
                 bonus=yes
-                carryover_percentage=80
+                carryover_percentage={ON_DIFFICULTY 80 70 60}
             [/gold_carryover]
         [/objectives]
 
@@ -174,14 +157,10 @@
         {MODIFY_UNIT (id=Glubtrub) moves 0}
         {MODIFY_UNIT (id=Glubtrub) max_moves 0}
         [modify_side]
-            side=3
-#ifdef HARD
-            gold=20
-#else
-            gold=40
-#endif
-            income=2
-            village_gold=2
+            side=3 # Ogres
+            {GOLD 60 40 20}
+            {INCOME 3 2 1}
+            village_gold={ON_DIFFICULTY 3 2 1}
         [/modify_side]
     [/event]
 
@@ -195,7 +174,7 @@
         {LOYAL_UNIT 3 (Young Ogre) 22 19}
         {LOYAL_UNIT 3 (Matronly Ogresses) 24 19}
         {LOYAL_UNIT 3 (Young Ogre) 23 19}
-#ifdef NORMAL
+#ifndef HARD
         {LOYAL_UNIT 3 (Young Ogre) 25 21}
         {LOYAL_UNIT 3 (She Ogre) 21 21}
 #endif
@@ -230,7 +209,7 @@
             {TURNS_RUN_OUT}
             [gold_carryover]
                 bonus=yes
-                carryover_percentage=60
+                carryover_percentage={ON_DIFFICULTY 80 70 60}
             [/gold_carryover]
         [/objectives]
         {VARIABLE glubtrub_active true}
@@ -281,7 +260,7 @@
         [/filter]
         [message]
             speaker=Kssihiss
-            message= _ "Damned humasss ... Hiss!"
+            message= _ "Damned humansss... Hiss!"
         [/message]
 
         [kill]
@@ -311,7 +290,7 @@
         [endlevel]
             bonus=yes
             carryover_add=true
-            carryover_percentage=60
+            carryover_percentage={ON_DIFFICULTY 80 70 60}
             result=victory
         [/endlevel]
     [/event]
