--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -6,11 +6,7 @@
     map_data="{~add-ons/A_Little_Adventure/maps/04_The_Bloody_Hills.map}"
     next_scenario=05_The_Lizards_Islands
 
-#ifdef NORMAL
-    turns=18
-#else
-    turns=16
-#endif
+    {TURNS 20 18 16}
 
     victory_when_enemies_defeated=no
 
@@ -38,7 +34,7 @@
         recruit=Bowman,Spearman,Young Ogre,She Ogre
         x,y=3,10
         {FLAG_VARIANT loyalist}
-        gold=100
+        {GOLD 120 110 100}
         team_name=Wesnothians
         user_team_name=_ "Wesnothians"
     [/side]
@@ -143,9 +139,13 @@
     [event]
         name=bat_generator
         first_time_only=no
-#ifdef NORMAL
+#ifdef EASY
         {VARIABLE_OP type_monster rand "Vampire Bat,Vampire Bat,Blood Bat" }
-#else
+#endif
+#ifdef NORMAL
+        {VARIABLE_OP type_monster rand "Vampire Bat,Blood Bat,Blood Bat" }
+#endif
+#ifdef HARD
         {VARIABLE_OP type_monster rand "Blood Bat,Blood Bat,Dread Bat" }
 #endif
         {VARIABLE max_bat_position $chasm_position.length}
@@ -177,9 +177,13 @@
     [event]
         name=wolf_generator
         first_time_only=no
-#ifdef NORMAL
+#ifdef EASY
         {VARIABLE_OP type_monster rand "Wolf,Wolf,Great Wolf"}
-#else
+#endif
+#ifdef NORMAL
+        {VARIABLE_OP type_monster rand "Wolf,Great Wolf,Great Wolf"}
+#endif
+#ifdef HARD
         {VARIABLE_OP type_monster rand "Wolf,Great Wolf,Direwolf"}
 #endif
         {VARIABLE max_wolf_position $cave_position.length}
@@ -206,10 +210,15 @@
         first_time_only=no
         {VARIABLE bat_number 1}
         {VARIABLE wolf_number 1}
-#ifdef NORMAL
+#ifdef EASY
         {VARIABLE_OP extra_bat_number rand "0..1"}
         {VARIABLE_OP extra_wolf_number rand "0..1"}
-#else
+#endif
+#ifdef NORMAL
+        {VARIABLE_OP extra_bat_number rand "0..2"}
+        {VARIABLE_OP extra_wolf_number rand "0..2"}
+#endif
+#ifdef HARD
         {VARIABLE_OP extra_bat_number rand "1..2"}
         {VARIABLE_OP extra_wolf_number rand "1..2"}
 #endif
@@ -232,16 +241,21 @@
         [/fire_event]
     [/event]
 
-    #turns of daytime events - generation of wolfs
+    #turns of daytime events - generation of wolves
 
     [event]
         name=turn 2,turn 3,turn 4,turn 10,turn 11,turn 12,turn 18,turn 19,turn 20
         first_time_only=no
-#ifdef NORMAL
+#ifdef EASY
         {VARIABLE wolf_number 1}
-        {VARIABLE_OP extra_wolf_number rand "0..2"}
-#else
+        {VARIABLE_OP extra_wolf_number rand "0..1"}
+#endif
+#ifdef NORMAL
         {VARIABLE wolf_number 2}
+        {VARIABLE_OP extra_wolf_number rand "0..2"}
+#endif
+#ifdef HARD
+        {VARIABLE wolf_number 3}
         {VARIABLE_OP extra_wolf_number rand "0..3"}
 #endif
         {VARIABLE_OP wolf_number add $extra_wolf_number}
@@ -258,10 +272,15 @@
     [event]
         name=turn 6,turn 7,turn 8,turn 14,turn 15,turn 16
         first_time_only=no
-#ifdef NORMAL
+#ifdef EASY
         {VARIABLE bat_number 1}
+        {VARIABLE_OP extra_bat_number rand "0..1"}
+#endif
+#ifdef NORMAL
+        {VARIABLE bat_number 2}
         {VARIABLE_OP extra_bat_number rand "0..2"}
-#else
+#endif
+#ifdef HARD
         {VARIABLE bat_number 2}
         {VARIABLE_OP extra_bat_number rand "0..3"}
 #endif
