--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -6,12 +6,7 @@
     map_data="{~add-ons/A_Little_Adventure/maps/05_The_Lizards_Islands.map}"
     next_scenario=06_The_Last_Battle
 
-#ifdef NORMAL
-    turns=24
-#endif
-#ifdef HARD
-    turns=20
-#endif
+    {TURNS 28 24 20}
 
     {SCHEDULE_8H}
 
@@ -37,7 +32,7 @@
         recruit=Bowman,Spearman,Young Ogre,She Ogre
         x,y=6,21
         {FLAG_VARIANT loyalist}
-        gold=100
+        {GOLD 120 110 100}
         team_name=Wesnothians
         user_team_name=_"Wesnothians"
     [/side]
@@ -59,13 +54,8 @@
             passive_leader=no
             recruit_diversity=0.5
         [/ai]
-#ifdef 	HARD
-        gold=400
-        income=16
-#else
-        gold=250
-        income=10
-#endif
+        {GOLD 200 300 400}
+        {INCOME 8 12 16}
         team_name=Saurian
         user_team_name= _ "Saurian"
         {FLAG_VARIANT6 ragged}
@@ -85,11 +75,7 @@
         canrecruit=yes
         recruit=Merman Citizen,Mermaid Initiate,Merman Fighter,Merman Hunter
         x,y=16,27
-#ifdef HARD
-        gold=25
-#else
-        gold=50
-#endif
+        {GOLD 75 50 25}
         team_name=Wesnothians
         user_team_name= _ "Nereids"
         {FLAG_VARIANT long}
@@ -102,7 +88,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Squash ... or ... Defeat the Saurian Chief"
+                description= _ "Squash... or... Defeat the Saurian Chief"
                 condition=win
             [/objective]
             [objective]
@@ -120,7 +106,7 @@
             {TURNS_RUN_OUT}
             [gold_carryover]
                 bonus=yes
-                carryover_percentage=80
+                carryover_percentage={ON_DIFFICULTY 80 70 60}
             [/gold_carryover]
         [/objectives]
     [/event]
@@ -148,12 +134,20 @@
 
         # ***** Nereids starting units *****
 
-#ifdef NORMAL
+#ifdef EASY
+        {LOYAL_UNIT 3 (Mermaid Initiate) 19 27}
         {LOYAL_UNIT 3 (Mermaid Enchantress) 19 27}
         {LOYAL_UNIT 3 (Merman Warrior) 15 29}
         {LOYAL_UNIT 3 (Merman Netcaster) 14 25}
         {LOYAL_UNIT 3 (Merman Spearman) 18 24}
-#else
+#endif
+#ifdef NORMAL
+        {LOYAL_UNIT 3 (Mermaid Enchantress) 19 27}
+        {LOYAL_UNIT 3 (Merman Fighter) 15 29}
+        {LOYAL_UNIT 3 (Merman Netcaster) 14 25}
+        {LOYAL_UNIT 3 (Merman Spearman) 18 24}
+#endif
+#ifdef HARD
         {LOYAL_UNIT 3 (Mermaid Initiate) 19 27}
         {LOYAL_UNIT 3 (Merman Fighter) 15 29}
         {LOYAL_UNIT 3 (Merman Hunter) 14 25}
@@ -236,7 +230,7 @@
         [/filter]
         [message]
             speaker=Giksy
-            message= _ "Aaah ... I'll ... never ... sssee ... my ... treasssure ... again ..."
+            message= _ "Aaah... I'll... never... sssee... my... treasssure... again..."
         [/message]
         [kill]
             side=2
@@ -249,7 +243,7 @@
         [endlevel]
             bonus=yes
             carryover_add=yes
-            carryover_percentage=60
+            carryover_percentage={ON_DIFFICULTY 80 70 60}
             result=victory
         [/endlevel]
     [/event]
@@ -269,7 +263,7 @@
         [/filter]
         [message]
             speaker=Glauco
-            message= _ "Oh no, without the nereids help it was all in vain! I failed!"
+            message= _ "Oh no, without the nereids' help, it was all in vain! I failed!"
         [/message]
         [endlevel]
             result=defeat
