--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -6,11 +6,7 @@
     map_data="{~add-ons/A_Little_Adventure/maps/02b_Battle_with_the_Orcs.map}"
     next_scenario=03_The_Nagas_Nest
 
-#ifdef NORMAL
-    turns=24
-#else
-    turns=20
-#endif
+    {TURNS 28 24 20}
 
     {SCHEDULE_8H}
 
@@ -59,11 +55,7 @@
         canrecruit=yes
         recruit=Orcish Archer,Orcish Grunt,Goblin Spearman,Wolf Rider
         x,y=26,2
-#ifdef HARD
-        gold=200
-#else
-        gold=120
-#endif
+        {GOLD 120 160 200}
         team_name=Orcs
         user_team_name= _ "Orcs"
         color=green
@@ -93,7 +85,7 @@
             [/objective]
             [gold_carryover]
                 bonus=yes
-                carryover_percentage=80
+                carryover_percentage={ON_DIFFICULTY 100 90 80}
             [/gold_carryover]
         [/objectives]
 
@@ -106,7 +98,7 @@
         {NAMED_GENERIC_UNIT 1 (Spearman) 11 20 (Geruntius) ("Geruntius")}
         {NAMED_GENERIC_UNIT 1 (Bowman) 12 20 (Virgulio) ("Virgulio")}
         {NAMED_GENERIC_UNIT 1 (Spearman) 13 21 (Closofeo) ("Closofeo")}
-#ifdef NORMAL
+#ifndef HARD
         {GENERIC_UNIT 1 (Bowman) 10 20 }
         {GENERIC_UNIT 1 (Spearman) 11 21 }
 #endif
@@ -263,7 +255,7 @@
             [/objective]
             [gold_carryover]
                 bonus=yes
-                carryover_percentage=100
+                carryover_percentage={ON_DIFFICULTY 100 90 80}
             [/gold_carryover]
         [/objectives]
 
@@ -294,7 +286,7 @@
         [endlevel]
             bonus=yes
             carryover_add=true
-            carryover_percentage=80
+            carryover_percentage={ON_DIFFICULTY 100 90 80}
             result=victory
         [/endlevel]
     [/event]
