--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -80,7 +80,7 @@
         controller=human
         recruit=Spearman,Bowman,Young Ogre,She Ogre
         x,y=29,20
-        gold=100
+        {GOLD 120 110 100}
         team_name=Wesnothians
         user_team_name= _ "Wesnothians"
         {FLAG_VARIANT loyalist}
@@ -102,13 +102,8 @@
             recruit_diversity=0.5
         [/ai]
         x,y=20,2
-#ifdef HARD
-        gold=600
-        income=40
-#else
-        gold=400
-        income=20
-#endif
+        {GOLD 400 500 600}
+        {INCOME 20 30 40}
         team_name=Orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -413,11 +408,7 @@
 
         [gold]
             side=2
-#ifdef HARD
-            amount=400
-#else
-            amount=200
-#endif
+            amount={ON_DIFFICULTY 200 300 400}
         [/gold]
         [modify_side]
             side=3
@@ -458,7 +449,7 @@
     [/kill]
     [message]
         speaker=Geobard
-        message= _ "Those damned are all death or escaped! Finally we finished!"
+        message= _ "Those damned are all dead or escaped! Finally we finished!"
     [/message]
     [endlevel]
         bonus=no
@@ -478,7 +469,7 @@
         [/message]
         [message]
             speaker=Glauco
-            message= _ "With your end, orc, Amoran will can have a new start!"
+            message= _ "With your end, orc, Amoran can and will have a new start!"
         [/message]
         [kill]
             id=Gan-Tarkas
