--- a/units/Naga_Hunter.cfg
+++ b/units/Naga_Hunter.cfg
@@ -39,7 +39,8 @@
         description= _"bow"
         type=pierce
         range=ranged
-        damage=8
+        # Nagas are only ever enemies in this campaign, so we can vary their damage like this:
+        damage={ON_DIFFICULTY 6 7 8}
         number=2
         icon=attacks/bow-orcish.png
         [specials]
