--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -19,20 +19,20 @@
     {SCROLL_AND_DELAY 20 1 1500}
     [message]
         speaker=Glauco
-        message= _ "Unfortunately they can do it freely, beyond the river is their territory. We still keep our eyes open, luckily they can pass the river only to the ford, and we are more than enough to defend it."
+        message= _ "Unfortunately they can do so freely; beyond the river is their territory. We still must keep our eyes open; luckily they can only cross the river at the ford, and there are more than enough of us to defend it."
     [/message]
     [message]
         speaker=Caius
-        message= _ "We may not be, commander; from the east are approaching a band of armed people with a little reassuring appearance."
+        message= _ "We might not be well-enough equipped to defend against them, commander; from the east are approaching a band of armed people with a non-reassuring appearance."
     [/message]
     {SCROLL_AND_DELAY 34 21 1500}
     [message]
         speaker=Glauco
-        message= _ "And their fame is even less reassuring than their appearance! Those approaching are the cutthroats of the Dadoc band. He came here to collect something, and for sure it's not the reward on his head."
+        message= _ "And their fame is even less reassuring than their appearance! Those approaching are the cutthroats of the Dadoc band. He came here to collect something, and it's definitely not the reward on his head."
     [/message]
     [message]
         speaker=Titus
-        message= _ "What do we do, Sergeant, if orcs and bandits attack us at the same time?"
+        message= _ "What do we do, Sergeant, if the orcs and bandits attack us at the same time?"
     [/message]
     [message]
         speaker=Glauco
@@ -40,7 +40,7 @@
     [/message]
     [message]
         speaker=Grunto
-        message= _ "You're finally here, Dadoc! if we take out the garrison then the city will be ours!"
+        message= _ "You're finally here, Dadoc! If we take out the garrison then the city will be ours!"
     [/message]
     [message]
         speaker=Dadoc
@@ -52,7 +52,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "An attack on two fronts, just what we didn't want! But, at least, we have no doubts about their intentions and we know what to do! They waited to be together to attack us, if we eliminate one of the two enemy commanders, the other will probably withdraw!"
+        message= _ "An attack on two fronts, just what we didn't want! But, at least, we have no doubts about their intentions, and we know what to do! They waited to be together to attack us; if we eliminate one of the two enemy commanders, the other will probably withdraw!"
     [/message]
 #enddef
 
@@ -63,23 +63,25 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Glad to see you, cavalryman! We have some little problems with orcs and bandit, how you can see, and your arrival is welcome, albeit unexpected!"
+        # TODO: he's a dragoon on EASY:
+        message= _ "Glad to see you, cavalryman! We have a little problem with some orcs and some bandits, as you can see, and your arrival is welcome, albeit unexpected!"
     [/message]
     [message]
         speaker=Geobard
-        message= _ "At Soradoc have had some inkling of strange movements by orcs not part of the Northern Alliance, so they sent mesaggers in all the eastern villages, and I have been sent here!"
+        message= _ "At Soradoc they have had some inkling of strange movements by orcs not part of the Northern Alliance, so they sent messengers to all the eastern villages, and I have been sent here!"
     [/message]
     [message]
         speaker=Glauco
-        message= _ "However I am surprised that they took this place into consideration, after ignoring it for so long."
+        message= _ "Hm, I am surprised that they took this place into consideration, after ignoring it for so long."
     [/message]
     [message]
         speaker=Geobard
-        message= _ "These are not things that the high spheres discuss with me, of course, but the leaked rumors speak of a renewed interest, in Wesnoth, for the amber, so Weldyn took the opportunity to see what the situation is here. It seems that I will have to report about a problematic situation."
+        message= _ "These are not things that the higher-ups discuss with me, of course, but the leaked rumors speak of a renewed interest, in Wesnoth, for amber, so Weldyn took the opportunity to see what the situation is here. It seems that I will have to report about a problematic situation."
     [/message]
     [message]
         speaker=Glauco
-        message= _ "The Amber Road is now reduced to fragments of uncertain path that cross wild areas; territories where the laws of Wesnoth are soverchiate by the law of the strongest band, and not always are gangs of humans. The river would be navigable from the eastern shores of the continent to here, but serves as a border with the orcish territories, and no transit is granted to any kind of ships."
+        #po: is "soverchiate" even English?
+        message= _ "The Amber Road is now reduced to fragments of uncertain paths that cross wild areas; territories where the laws of Wesnoth are soverchiate by the law of the strongest band, and they're not always gangs of humans. The river would be navigable from the eastern shores of the continent to here, but it serves as a border with the orcish territories, and no transit is granted to any kind of ships."
     [/message]
     [message]
         speaker=Geobard
@@ -91,18 +93,19 @@
     [/message]
     [message]
         speaker=Geobard
-        message= _ "Incredibie! Anyway, I don't think I'm wrong by putting me on your orders, commander ... ?"
+        message= _ "Incredibie! Anyway, I don't think I'm wrong by putting me on your orders, commander...?"
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Sergeant Glauco, cavalryman, and I hope to be worthy of your confidence! And now let's rid out this rubble!"
+        # TODO: he's a dragoon on EASY:
+        message= _ "Sergeant Glauco, cavalryman, and I hope to be worthy of your confidence! And now let's rid out this rabble!"
     [/message]
 #enddef
 
 #define 02A_INTRODUCTION_01
     [message]
         id=Dadoc
-        message= _ "Good morning, men of Wesnoth, let's to catch the great Dadoc in his home, if you can!"
+        message= _ "Good morning, men of Wesnoth, let's try to catch the great Dadoc in his home, if you can!"
     [/message]
 #enddef
 
