almost done with a first playthru

--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -55,7 +55,7 @@
         canrecruit=yes
         recruit=Orcish Archer,Orcish Grunt,Goblin Spearman,Wolf Rider
         x,y=26,2
-        {GOLD 120 160 200}
+        {GOLD 100 150 200}
         team_name=Orcs
         user_team_name= _ "Orcs"
         color=green
@@ -98,7 +98,11 @@
         {NAMED_GENERIC_UNIT 1 (Spearman) 11 20 (Geruntius) ("Geruntius")}
         {NAMED_GENERIC_UNIT 1 (Bowman) 12 20 (Virgulio) ("Virgulio")}
         {NAMED_GENERIC_UNIT 1 (Spearman) 13 21 (Closofeo) ("Closofeo")}
-#ifndef HARD
+#ifdef EASY
+        {LOYAL_UNIT 1 (Longbowman) 10 20 }
+        {LOYAL_UNIT 1 (Spearman) 11 21 }
+#endif
+#ifdef NORMAL
         {GENERIC_UNIT 1 (Bowman) 10 20 }
         {GENERIC_UNIT 1 (Spearman) 11 21 }
 #endif
