--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -169,14 +169,18 @@
         first_time_only=yes
         [message]
             speaker=Glubtrub
+            #po: "wetspot" is ogre-speak for "Wesnoth"
             message= _ "What this confusion? Men colored like wetspot and snake to fight? Ogres to come too, good chance to squash all!"
         [/message]
         {LOYAL_UNIT 3 (Young Ogre) 22 19}
         {LOYAL_UNIT 3 (Matronly Ogresses) 24 19}
         {LOYAL_UNIT 3 (Young Ogre) 23 19}
-#ifndef HARD
+#ifdef EASY
         {LOYAL_UNIT 3 (Young Ogre) 25 21}
         {LOYAL_UNIT 3 (She Ogre) 21 21}
+#endif
+#ifdef NORMAL
+        {LOYAL_UNIT 3 (Young Ogre) 21 21}
 #endif
         {MODIFY_TERRAIN Hhd^Cov 21 20}
         {MODIFY_TERRAIN Hhd^Cov 23 20}
