--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -34,7 +34,7 @@
         recruit=Bowman,Spearman,Young Ogre,She Ogre
         x,y=3,10
         {FLAG_VARIANT loyalist}
-        {GOLD 120 110 100}
+        {GOLD 140 120 100}
         team_name=Wesnothians
         user_team_name=_ "Wesnothians"
     [/side]
@@ -54,7 +54,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Glauco reach the signpost over the mountains"
+                description= _ "Glauco reaches the signpost over the mountains"
                 condition=win
             [/objective]
             [objective]
@@ -319,6 +319,7 @@
         [unit]
             side=1
             id=Mimord
+            # FIXME: A unit with berserk is a terrible matchup against all the bats; give him something to counteract their "drain" ability:
             type=Dwarvish Berserker
             name="Mimord"
             unrenamable=yes
@@ -339,6 +340,7 @@
             [then]
                 [message]
                     speaker=Mimord
+                    # TODO: reword:
                     message= _ "Damned wolves, I thought I had taught you not to enter in my house! Well, I'll do a wrap with your fur!"
                 [/message]
                 [message]
@@ -355,6 +357,7 @@
                     [then]
                         [message]
                             speaker=Mimord
+                            #po: a "capon" is a rooster that has been castrated or neutered:
                             message= _ "Ugly bird! Wolves and bats were not enough around here? I'll make you end like a capon!"
                         [/message]
                         [message]
@@ -375,6 +378,7 @@
                                 [/message]
                                 [message]
                                     speaker=Mimord
+                                    # FIXME: not sure how to reword this:
                                     message= _ "That's right, stupid ogre! And we missed only you to turn around my home! Well, if I break your head I will not do much damage, you don't hold anything into there!"
                                 [/message]
                                 [message]
@@ -408,7 +412,7 @@
         [/filter]
         [message]
             speaker=Glauco
-            message= _ "We passed those hills, finally! We can to reach the nereids, now!"
+            message= _ "We passed those hills, finally! We can continue on to reach the nereids now!"
         [/message]
         {STORE_HEROES}
         [endlevel]
@@ -434,7 +438,7 @@
         name=time over
         [message]
             speaker=Glauco
-            message= _ "All these attacks are exhausting us, we won't be able to cross the hills! We must retreat, the mission failed!"
+            message= _ "All these attacks are exhausting us; we won't be able to cross the hills! We must retreat; the mission failed!"
         [/message]
         [endlevel]
             result=defeat
