--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -5,6 +5,7 @@
     name= _ "The Last Battle"
     map_data="{~add-ons/A_Little_Adventure/maps/06_The_Final_Battle.map}"
     next_scenario=07_Epilogue
+    turns=unlimited
 
     {SCHEDULE_8H}
 
@@ -80,7 +81,8 @@
         controller=human
         recruit=Spearman,Bowman,Young Ogre,She Ogre
         x,y=29,20
-        {GOLD 120 110 100}
+        {GOLD 180 140 100}
+        {INCOME 3 2 1}
         team_name=Wesnothians
         user_team_name= _ "Wesnothians"
         {FLAG_VARIANT loyalist}
@@ -282,7 +284,7 @@
         name=turn 4
         [message]
             speaker=Gan-Tarkas
-            message= _ "Widen again the path on the river, and then all to the assault!"
+            message= _ "Widen the path across the river again, and then everyone attack!"
         [/message]
 
         [sound]
@@ -506,7 +508,7 @@
         [/kill]
         [message]
             speaker=Glubtrub
-            message= _ "Other snake make flat flat Oh! Oh! Oh!"
+            message= _ "Other snake make flat-flat! Oh! Oh! Oh!"
         [/message]
         [if]
             [have_unit]
@@ -515,7 +517,7 @@
             [then]
                 [message]
                     speaker=Geobard
-                    message= _ "And now let's finish taking care of his friend Gan-Tarkas!"
+                    message= _ "And now let's finish taking care of his friend, Gan-Tarkas!"
                 [/message]
             [/then]
             [else]
