--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -80,8 +80,7 @@
     [/message]
     [message]
         speaker=Glauco
-        #po: is "soverchiate" even English?
-        message= _ "The Amber Road is now reduced to fragments of uncertain paths that cross wild areas; territories where the laws of Wesnoth are soverchiate by the law of the strongest band, and they're not always gangs of humans. The river would be navigable from the eastern shores of the continent to here, but it serves as a border with the orcish territories, and no transit is granted to any kind of ships."
+        message= _ "The Amber Road is now reduced to fragments of uncertain paths that cross wild areas; territories where the laws of Wesnoth are overpowered by the law of the strongest band, and they're not always gangs of humans. The river would be navigable from the eastern shores of the continent to here, but it serves as a border with the orcish territories, and no transit is granted to any kind of ships."
     [/message]
     [message]
         speaker=Geobard
@@ -112,34 +111,35 @@
 #define 02A_INTRODUCTION_02
     [message]
         speaker=Glauco
-        message= _ "And even annoys us, that damned! But now what do we do? We know absolutely nothing about this forest, and I would not lead my men into a trap."
+        message= _ "And he even annoys us, that damned bandit! But now what do we do? We know absolutely nothing about this forest, and I won't lead my men into a trap."
     [/message]
     [message]
         speaker=Geobard
-        message= _ "Look sir! There's a cottage over there! I go to see if someone live into it! Friend or foe who will be, he will tell us something about this place, with the good manners in the first case and with the bad in the second."
+        message= _ "Look, sir! There's a cottage over there! I'll go to see if someone lives in it! Whether he be friend or foe, he will tell us something about this place, with good manners in the first case, and with bad ones in the second."
     [/message]
     {MOVE_UNIT id=Geobard 9 4}
     [message]
         speaker=Geobard
-        message= _ "There's nothing here? I'm a representative of the Wesnoth's Army!"
+        message= _ "There's no one here? I'm a representative of the Wesnothian Army!"
     [/message]
 #enddef
 
 #define 02A_INTRODUCTION_03
     [message]
         speaker=Divaid
-        message= _ "There are me, here, representative of the Wesnoth's busybodies! I and my friend Ranfy. And this will also be territory of Wesnoth, but I will have a blow if it isn't the first time I see its colors from at least ... forty years! What are you doing here right now?"
+        # "I and my friend" works, too, but "Me and my friend" sounds more natural:
+        message= _ "There's me, here, representative of Wesnoth's busybodies! Me and my friend Ranfy. And this may also be territory of Wesnoth, but I will have a blow if it isn't the first time I've seen its colors in at least... forty years! What are you doing here right now?"
     [/message]
     [message]
         speaker=Glauco
-        message= _ "I'm the sergeant Glauco, commander of the Amoran's garrison! I and my companions are searching Dadoc the bandit, because to get him what he deserves! But who is Ranfy?"
+        message= _ "I'm the sergeant Glauco, commander of the Amoran's garrison! My companions and I are searching for Dadoc the bandit, because we need to give him what he deserves! But who is Ranfy?"
     [/message]
 #enddef
 
 #define 02A_RANFY_INTRODUCTION
     [message]
         speaker=Ranfy
-        message=_ "Kreeeeee !"
+        message=_ "Kreeeeee!"
     [/message]
     [message]
         speaker=Glauco
@@ -147,11 +147,11 @@
     [/message]
     [message]
         speaker=Divaid
-        message= _ "Of monstrous, here, there is only your ignorance, Wesnothians! He's Ranfy, I adopted him when he was again an egg, And since then it helps me to hunt and to keep mice and bandits away from our home, bandits like your friend Dadoc, who, I fear, you have to look in the forest. Well, good luck, because you need a lot of it!"
+        message= _ "The only \"monstrous\" thing here, Wesnothians, is your ignorance! He's Ranfy; I adopted him when he was still an egg! Since then he's been helping me to hunt and to keep mice and bandits away from our home, bandits like your friend Dadoc, who, I fear, you'll have to look for in the forest. Well, good luck, because you'll need a lot of it!"
     [/message]
     [message]
         speaker=Glauco
-        message= _ "You seem to know this place well, why don't you help us? To eliminate Dadoc will save a little of work to your ... nice friend."
+        message= _ "You seem to know this place well, why don't you help us? Eliminating Dadoc will save a little of work for your... nice friend."
     [/message]
     [message]
         speaker=Divaid
@@ -171,11 +171,11 @@
     [/sound]
     [message]
         speaker=Ranfy
-        message=_ "Kraaaaaa ... Kruu Kruu ... Fiiii"
+        message=_ "Kraaaaaa... Kruu Kruu... Fiiii"
     [/message]
     [message]
         speaker=Divaid
-        message= _ "You are a lucky man, mister commander of the Amoran's garrison! My friend, here, say that you like to him! So, my new companions, things are like this: Dadoc has a certain number of shelters, in the forest, where he disperses his band when they don't have to act; to find Dadoc we will have to rummage them one by one, and if we are lucky we will find Dadoc immediately, if we have misfortune we will have to explore them all; but we may not have the time to do so."
+        message= _ "You are a lucky man, mister commander of the Amoran's garrison! My friend, here, says that he likes you! So, my new companions, things are like this: Dadoc has a certain number of shelters, in the forest, where he disperses his band when they don't have to act; to find Dadoc we will have to rummage through them one by one, and if we are lucky we will find Dadoc immediately; if we have misfortune we will have to explore them all; but we may not have the time to do so."
     [/message]
     [message]
         speaker=Glauco
@@ -187,7 +187,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Then let's not waste any more time! Come on men! We can't let that rascal's wrongdoings remain unpunished."
+        message= _ "Then let's not waste any more time! Come on, men! We can't let that rascal's wrongdoings remain unpunished!"
     [/message]
 #enddef
 
