--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -32,7 +32,8 @@
         recruit=Bowman,Spearman,Young Ogre,She Ogre
         x,y=6,21
         {FLAG_VARIANT loyalist}
-        {GOLD 120 110 100}
+        {GOLD 180 140 100}
+        {INCOME 3 2 1}
         team_name=Wesnothians
         user_team_name=_"Wesnothians"
     [/side]
@@ -79,6 +80,16 @@
         team_name=Wesnothians
         user_team_name= _ "Nereids"
         {FLAG_VARIANT long}
+        [ai]
+            [goal]
+                name=protect_unit
+                [criteria]
+                    id=Joralda
+                [/criteria]
+                protect_radius={ON_DIFFICULTY 10 9 8}
+                value={ON_DIFFICULTY 7 6 5}
+            [/goal]
+        [/ai]
     [/side]
     {STARTING_VILLAGES_AREA 3 16 27 6}
 
@@ -204,7 +215,7 @@
         [/fire_event]
         [message]
             speaker=Joralda
-            message= _ "Other monster coming from the north, they are like those before!"
+            message= _ "More monsters are coming from the north; they are like those before!"
         [/message]
     [/event]
 
